@@ -50,9 +50,16 @@ module Deployment {
 
   typedef sequence < Application > Applications;
 
+  /// CIAO 's DomainApplicationManager interface differs spec-defined interface
+  /// in the same that it also integrates the spec-defined interface for
+  /// DomainApplication into itself
   interface DomainApplicationManager
   {
     DeploymentPlan getPlan ();
+
+    /// CIAO specific version of startLaunch implementation, this one
+    /// differs with spec-defined operation in the sense that it doesn't
+    /// return DomainApplication object reference.
     void startLaunch (in Properties configProperty, in boolean start)
       raises (ResourceNotAvailable, StartError, InvalidProperty);
     void finishLaunch (in boolean start)
@@ -85,10 +92,12 @@ module Deployment {
     void destroyManager (in DomainApplicationManager manager)
       raises (StopError);
 
-    // This operation could handle dynamic redeployment, and this
-    // is the operation exposed to clients directly. Other 
-    // "perform_redeployment" operation defined on DAM and NA
-    // are implementaion details within DAnCE.
+    /// CIAO specific operation to handle dynamic system redeployment
+    /// and reconfiguration
+    /// This operation could handle dynamic redeployment, and this
+    /// is the operation exposed to clients directly. Other 
+    /// "perform_redeployment" operation defined on DAM and NA
+    /// are implementaion details within DAnCE.
     void perform_redeployment (in DeploymentPlan new_plan)
       raises (PlanError,
               InstallationFailure,
@@ -116,8 +125,10 @@ module Deployment {
   interface NodeApplicationManager :
       ApplicationManager
   {
-    // This operation could handle dynamic redeployment for
-    // a node-level deployment plan within a node
+    /// CIAO specific operation to handle dynamic system redeployment
+    /// and reconfiguration
+    /// This operation could handle dynamic redeployment for
+    /// a node-level deployment plan within a node
     Application perform_redeployment (in Properties configProperty, 
                                       out Connections providedReference,
                                       in boolean start)
