@@ -82,8 +82,9 @@ Visio file</a> (The same file in Visio V.5 format is <a
 <br>
 <hr>
 <h2>CIAO's D&C Framework (DAnCE) part-by-part</h2>
-Here is a list of the major actors of CIAO runtime that a user should
-be aware of.
+DAnCE's implementation is based on the OMG's Deployment and Configuration
+Specification version [ptc/2003-07-08]. Here is a list of the major
+actors of CIAO runtime that a user should be aware of.
 <ul>
   <li><a
  href="http://www.dre.vanderbilt.edu/Doxygen/Current/html/tao/ciao/dance/dir_000011.html"><strong>NodeManager:</strong></a>
