@@ -1,3 +1,11 @@
+Wed Dec 07 18:05:35 2005  Gan Deng  <gan.deng@vanderbilt.edu>
+
+	* ciao/Deployment.idl
+	* ciao/Deployment_Core.idl
+	* doc/index.html
+
+	Document CIAO specific interface extension/modifications.
+
 Wed Dec  7 12:41:22 2005  Boris Kolpackov  <boris@kolpackov.net>
 
 	* CIDLC/ExecImplGenerator.cpp:
